test/fixtures/public/fail/syntactical/LengthError.jmm
class LengthError {
	public static void main(String[] args) {
	while (length) {
		
		}
	}
}